--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: crrSC
 Title: Competing risks regression for Stratified and Clustered data
-Version: 1.0.1
+Version: 1.0.2
 Author: Bingqing Zhou and Aurelien Latouche
 Description: Extension of cmprsk to Stratified and Clustered data
-Depends: R (>= 1.9.1), survival
+Depends: survival
 Maintainer: Aurelien Latouche <aurelien.latouche@uvsq.fr>
 License: GPL-2
-Packaged: 2011-03-08 17:38:42 UTC; al
+Packaged: 2012-10-29 08:58:28 UTC; ripley
 Repository: CRAN
-Date/Publication: 2011-03-09 14:24:50
+Date/Publication: 2012-10-29 08:58:28
