--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: crrSC
 Title: Competing risks regression for Stratified and Clustered data
-Version: 1.0.3
+Version: 1.1
 Author: Bingqing Zhou and Aurelien Latouche
-Description: Extension of cmprsk to Stratified and Clustered data
+Description: Extension of cmprsk to Stratified and Clustered data.
+        Goodness of fit test for Fine-Gray model.
 Depends: survival
 Maintainer: Aurelien Latouche <aurelien.latouche@cnam.fr>
 License: GPL-2
-Packaged: 2012-11-06 15:34:40 UTC; latouche
+Packaged: 2013-06-22 20:01:47 UTC; latouche
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-11-06 16:18:21
+Date/Publication: 2013-06-23 00:24:34
